# terraform-provider-terrible

./: .gitignore  CLAUDE.md  Makefile  README.md  _terrible_main.py  main.py  pyproject.toml  terrible.spec
.github/workflows/: build-binary.yml  ci.yml  claude-review.yml  integration.yml  release.yml  warm-cache.yml
docs/: index.md
docs/ephemeral-resources/: async_status.md  command.md  expect.md  fetch.md  ping.md  raw.md  reboot.md  script.md  shell.md  tempfile.md  uri.md  wait_for.md  wait_for_connection.md
docs/resources/: apt.md  apt_key.md  apt_repository.md  assemble.md  blockinfile.md  command.md  copy.md  cron.md  deb822_repository.md  debconf.md  dnf.md  dnf5.md  dpkg_selections.md  expect.md  fetch.md  file.md  get_url.md  git.md  group.md  hostname.md  iptables.md  known_hosts.md  lineinfile.md  package.md  ping.md  pip.md  playbook.md  raw.md  reboot.md  replace.md  role.md  rpm_key.md  script.md  service.md  shell.md  subversion.md  systemd.md  systemd_service.md  sysvinit.md  tempfile.md  (+7 more)
examples/: README.md
examples/cloud_vm/: main.tf
scripts/: generate-docs.sh  install-hooks.sh  install_provider.py  pre-commit  release.sh  start-ssh-target.sh
templates/: index.md.tmpl
terrible_provider/: __init__.py  cli.py  discovery.py  ephemeral.py  ephemeral_ping.py  host.py  host_group.py  install.py  play.py  provider.py  resources.py  task_base.py  task_datasource.py
tests/: test_datasource.py  test_discovery.py  test_ephemeral.py  test_example.py  test_host.py  test_host_group.py  test_play.py  test_provider.py  test_task_base.py
(+24 files in other folders)
