[project]
name = "terrible"
version = "0.1.0"
description = "Terraform provider that exposes Ansible modules as Terraform-managed resources"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible>=13.3.0",
    "tf>=1.1.0",
]

[project.scripts]
terraform-provider-terrible = "terrible_provider.cli:main"
install-provider = "terrible_provider.install:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-timeout>=2.3.0",
    "pex>=2.20.0",
]
